Fixes layout shift when toggling edit mode Preview can now be used as a lookup

--- a/src/app.css
+++ b/src/app.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  overflow: visible;
+  overflow: hidden;
 }
 
 #app {
